fixed display overlap on mobile & hid nav on mobile

--- a/src/components/content/AboutMe/style.css
+++ b/src/components/content/AboutMe/style.css
@@ -45,3 +45,8 @@
     order: 1;
   }
 }
+
+.about-me-container {
+  height: auto;
+  padding: 50px;
+}
